Mise a jour doc api + Fix bug mobile scrollview
