# portfolio-web/src/app/api/auth/users/route.ts
@@ -2,12 +2,14 @@ import { NextRequest, NextResponse } from 'next/server';
 
 import { connectDB } from '@/backend/database/mongoose';
 import { requireAuth } from '@/backend/auth/auth.middleware';
+import { UsersListResponse } from '@/backend/auth/auth.schema';
 import { listUsersService } from '@/backend/auth/auth.service';
 
 /**
  * Recupere la liste des utilisateurs
- * @response 200:UsersListResponse:Liste des utilisateurs
+ * @response 200:UsersListResponse
  * @response 401:Unauthorized
+ * @responseSet auth
  * @openapi
  */
 export async function GET(request: NextRequest) {
